--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,7 @@
   {% for item in site.data.navigation %}
     <a href="{{ item.link }}" {% if page.url == item.link %}style="color: red;"{% endif %}>
       {{ item.name }}
+      {{site.data}}
     </a>
   {% endfor %}
 </nav>
