--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="icon" href="favicon.png">
   </head>
-  <body>
+  <body class="index-page">
+
+    
+    <header class="header">
+        <img src="/assets/img/logo-center.png" alt="Dynamic Accounting Blog"/>
+    </header>
     {% include navigation.html %}
     {{ content }}
   </body>
