--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
     
     <header class="header">
-        <img src="/assets/img/logo-center.png" alt="Dynamic Accounting Blog"/>
+        <img src="/assets/img/white-on-transparent-small.png" alt="Dynamic Accounting Blog"/>
     </header>
     {% include navigation.html %}
     {{ content }}
