--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,11 @@
-<nav>
+<nav class="nav-wrapper">
+  
   {% for item in site.data.navigation %}
-    <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% else %}class="menu"{% endif %}>
+  <ul>
+    <li class="list-item"><a href="{{ item.link }}" class="nav-item">
       {{ item.name }}
-    </a>
+    </a></li>
+  </ul>
   {% endfor %}
+ 
 </nav>
