--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,12 @@
   </head>
   <body class="index-page">
 
-    
+    <!-- <div class="layer"> -->
     <header class="header">
         <img src="/assets/img/white-on-transparent-small.png" alt="Dynamic Accounting Blog"/>
     </header>
     {% include navigation.html %}
     {{ content }}
+  <!-- </div> -->
   </body>
 </html>
