--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,16 +1,41 @@
-.current {
-    color: green;
+// Google font
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Teko:300,400&display=swap');
+
+// Font Variables
+$teko-font: 'Teko', sans-serif;
+$open-font: 'Open Sans', sans-serif;
+
+
+.nav-wrapper {
+    text-align: center;
+    
 }
-.menu {
+.list-item {
+   list-style-type: none;
+   //border-bottom-width: 1px;
+   //border-bottom-color: rgb(211,211,211);
+   //border-bottom-style: solid;
+}
+
+.nav-item {
     color: white;
+    font-family: $teko-font;
+    font-weight: lighter;
+    font-size: 35px;
+    text-decoration: none;
+    margin-bottom: 8px;
+    border-bottom-width: 2px;
+   border-bottom-color: rgba(144,143,143,1);
+   border-bottom-style: solid;
 }
+
 @keyframes myfirst {
     from {opacity: 0.2;}
     to {opacity: 1;}
 }
 
 .index-page {
-    background: url(/../assets/img/clouds-conifers-country.jpg) no-repeat center center fixed;
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(/../assets/img/clouds-conifers-country.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -20,6 +45,6 @@
 }
 
 .header {
-    position: relative;
+    //position: relative;
     text-align: center;
 }
