minor css changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
     <!-- <div class="layer"> -->
     <header class="header">
-        <img src="/assets/img/white-on-transparent-small.png" alt="Dynamic Accounting Blog"/>
+        <img class="header-wrap" src="/assets/img/white-on-transparent-small.png" alt="Dynamic Accounting Blog"/>
     </header>
     {% include navigation.html %}
     {{ content }}
