index page with social icons and description and horizontal menu

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,13 @@
 <nav class="nav-wrapper">
   
   {% for item in site.data.navigation %}
-  <ul>
-    <li class="list-item"><a href="{{ item.link }}" class="nav-item">
-      {{ item.name }}
-    </a></li>
-  </ul>
+ <!--  <ul> -->
+    <!-- <li class="list-item"> -->
+        <a href="{{ item.link }}" class="nav-item">
+          {{ item.name }}
+        </a>
+    <!-- </li> -->
+  <!-- </ul> -->
   {% endfor %}
  
 </nav>
