--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>Dynamic Accounting</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="icon" href="favicon.png">
+
   </head>
   <body class="index-page">
 
@@ -14,6 +17,7 @@
     </header>
     {% include navigation.html %}
     {{ content }}
+    {% include social.html %}
   <!-- </div> -->
   </body>
 </html>
