--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,8 +1,6 @@
 // Google font
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Teko:300,400&display=swap');
 
-
-
 // Font Variables
 $teko-font: 'Teko', sans-serif;
 $open-font: 'Open Sans', sans-serif;
@@ -44,14 +42,14 @@ $open-font: 'Open Sans', sans-serif;
       linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.3)), 
       url(/../assets/img/clouds-conifers-country.jpg);
     background-repeat: no-repeat;
-      background-position: center center; 
-      background-attachment: fixed;
-          background-size: cover;
+    background-position: center center; 
+    background-attachment: fixed;
+    background-size: cover;
+    animation: myfirst 7s ;
 
     //-webkit-background-size: cover;
     //-moz-background-size: cover;
     //-o-background-size: cover;
-    animation: myfirst 7s ;
     //transition: background 5000ms ease-in 400ms;
     //transition: background-image 5000ms ease-in-out
 }
@@ -74,7 +72,6 @@ $open-font: 'Open Sans', sans-serif;
   font-weight: lighter;
   padding: 24px 4px 0 4px;
   margin: 0px;
-  //width: 40%;
 }
 
 .index-p {
@@ -86,12 +83,11 @@ $open-font: 'Open Sans', sans-serif;
   margin: 0px;
   border-bottom-width: 1px;
   border-bottom-color: rgba(144,143,143,1);
-  border-bottom-style: ridge;
-  //width: 40%;
-  
+  border-bottom-style: ridge;  
 }
 
-/* Style all font awesome icons */.fa {
+/* Style all font awesome icons */
+.fa {
   padding: 20px;
   font-size: 30px;
   width: 30px;
@@ -104,9 +100,6 @@ $open-font: 'Open Sans', sans-serif;
   opacity: 0.7;
 }
 
-/* Set a specific color for each brand */
-
-/* Twitter */
 .fa-twitter {
   color: white;
 }
