--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Dynamic Accounting</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="icon" href="favicon.png">
 
   </head>
   <body class="index-page">
-
-    <!-- <div class="layer"> -->
     <header class="header">
         <img class="header-wrap" src="/assets/img/white-on-transparent-small.png" alt="Dynamic Accounting Blog"/>
     </header>
     {% include navigation.html %}
     {{ content }}
-    {% include social.html %}
-  <!-- </div> -->
+    <footer class="footer-style"><p style="float:left;margin-bottom:4px;">made with 
+      <a href="http://www.thecomicstrips.com/store/add.php?iid=30987">
+        <i class="fa fa-fire"></i>
+      </a> by
+      <a href="{{ site.data.social.github.href }}{{ site.data.social.github.id }}" style="color:white;font-weight:bold;text-decoration: none;"> anka
+      </a></p>
+      <p style="float: right;margin:0;">{% include social.html %}</p>
+    </footer>
   </body>
 </html>
