--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       </a>by
       <a href="{{ site.data.social.github.href }}{{ site.data.social.github.id }}" style="color:white;font-weight:bold;text-decoration: none;"> anka
       </a></p>
-      <p style="float: right;margin:0;">{% include social.html %}</p>
+      <p style="float: right;margin:0;font-size:34px;">Contact Info: {% include social.html %}</p>
     </footer>
   </body>
 </html>
