some minor changes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,4 +10,4 @@ layout: default
     - <a href="{{ author.url }}">{{ author.name }}</a>
   {% endif %}
 </p>
-<section style="color:white;margin-bottom:24px;">{{ content }}</section>
+<section style="color:white;margin-bottom:24px;position: relative;">{{ content }}</section>
