--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Dynamic Accounting</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/regular.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="icon" href="favicon.png">
 
