--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,7 +47,7 @@ $open-font: 'Open Sans', sans-serif;
     background-size: cover;
     position: relative;
     //animation: myfirst 7s ;
-    height: 100%;
+    height: 100vh;
   
 
     //-webkit-background-size: cover;
@@ -115,31 +115,32 @@ $open-font: 'Open Sans', sans-serif;
 }
 
 .post-header {
+  font-family: $teko-font;
   color: white;
-  text-decoration: none;
+  //text-decoration: none;
+    list-style-type: none;
+
+
 }
 
 .post-content {
+  font-family: $teko-font;
   color: white;
+  margin-left: 8px;
+
 }
 
-/* Nathan Lam
-   June 2, 2017
-   Add this css for responsive embedded videos in your .css file. */
-.embed-container {
-  position: relative;
-  padding-bottom: 43.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
+.post-list {
+  padding-bottom:80px;
 }
 
 /* Style all font awesome icons */
 .fa,
 .fab,
-.far {
+.far,
+.fas {
   padding: 20px;
-  font-size: 30px;
+  //font-size: 30px;
   width: 30px;
   text-align: center;
   text-decoration: none;
@@ -168,5 +169,10 @@ $open-font: 'Open Sans', sans-serif;
 .fa-fire {
   color: red;
   padding: 0px;
+}
+
+.fa-wind {
+  color: rgba(175, 193, 28, 1);
+  padding: 0 8px 0 0;
 }
 
