--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="icon" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
   </head>
   <body class="index-page">
