first post and drafts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,5 +10,5 @@ layout: default
     - <a href="{{ author.url }}">{{ author.name }}</a>
   {% endif %}
 </p>
-<section style="color:white;margin-bottom:24px;position: relative;">{{ content }}</section>
+<section class="post-content">{{ content }}</section>
 </div>
