--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -119,9 +119,23 @@ $open-font: 'Open Sans', sans-serif;
 }
 
 .post-content {
-  font-family: $teko-font;
+  font-family: $open-font;
+  font-weight: lighter;
   color: white;
-  margin-left: 8px;
+  margin-bottom: 24px;
+  font-size: 20px;
+
+  a:link, a:visited {
+    color: white;
+
+    &:hover {
+      color: rgba(25, 181, 254, 1);
+    }
+  }
+
+  ol ul {
+  list-style-type: disc;
+  }
 }
 
 /* Style all font awesome icons */
