added twitter feed

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -84,7 +84,8 @@ $open-font: 'Open Sans', sans-serif;
   margin: 0px;
   border-bottom-width: 1px;
   border-bottom-color: rgba(144,143,143,1);
-  border-bottom-style: ridge;  
+  border-bottom-style: ridge;
+  margin-bottom: 12px;
 }
 
 .footer-style {
