added share bar and styled it

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,5 +10,6 @@ layout: default
     - <a href="{{ author.url }}">{{ author.name }}</a>
   {% endif %}
 </p>
+{% include share_bar.html %}
 <section class="post-content">{{ content }}</section>
 </div>
