--- a/_includes/social.html
+++ b/_includes/social.html
@@ -4,7 +4,7 @@
     {% for entry in sm %}
         {% assign key = entry | first %}
         {% if sm[key].id %}
-            <a href="{{ sm[key].href }}{{ sm[key].id }}" title="{{ sm[key].name }}"><i class="{% if sm[key].name == "Email" %}far {% else %}fab {% endif %}{{ sm[key].fa-icon }}"></i></a>
+            <a href="{{ sm[key].href }}{{ sm[key].id }}" title="{{ sm[key].name }}"><i class="contact-icon {% if sm[key].name == "Email" %}far {% else %}fab {% endif %}{{ sm[key].fa-icon}}"></i></a>
         {% endif %}
     {% endfor %}
 
