--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -177,7 +177,51 @@ $open-font: 'Open Sans', sans-serif;
   }
 }
 
-/* Style all font awesome icons */
+.contact-icon {
+  padding: 20px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+}
+
+.contact-icon.fa-linkedin {
+  color: white;
+}
+
+.contact-icon.fa-linkedin:hover {
+  background-color: transparent;
+  color: rgba(25, 181, 254, 1);
+}
+
+.contact-icon.fa-twitter {
+  color: white;
+}
+
+.contact-icon.fa-twitter:hover {
+  background-color: transparent;
+  color: rgba(25, 181, 254, 1);
+}
+
+.contact-icon.fa-envelope {
+  color: white;
+}
+
+.contact-icon.fa-envelope:hover {
+  background-color: transparent;
+  color: rgba(25, 181, 254, 1);
+}
+
+.contact-icon.fa-github {
+  color: white;
+}
+
+.contact-icon.fa-github:hover {
+  background-color: transparent;
+  color: rgba(25, 181, 254, 1);
+}
+
+/* Style all font awesome icons 
 .fa,
 .fab,
 .far,
@@ -207,7 +251,7 @@ $open-font: 'Open Sans', sans-serif;
 .fa-linkedin {
   color: white;
 }
-
+*/
 .fa-fire {
   color: red;
   padding: 0px;
@@ -216,5 +260,100 @@ $open-font: 'Open Sans', sans-serif;
 .fa-wind {
   color: rgba(175, 193, 28, 1);
   padding: 0 8px 0 0;
+}
+
+/* Share bar */
+/* Share Bar */
+#share-bar {
+    font-size: 20px;
+}
+
+/* Title */
+#share-bar h4 {
+    margin-bottom: 10px;
+    font-weight: 500;
+    color: white;
+    font-family: $open-font;
+}
+
+/* All buttons */
+.share-buttons {
+}
+
+/* Each button */
+.share-button {
+    margin: 0px;
+    margin-bottom: 10px;
+    margin-right: 3px;
+    border: 1px solid #D3D6D2;
+    padding: 5px 10px 5px 10px;
+}
+.share-button:hover {
+    opacity: 1;
+    color: #ffffff;
+}
+
+/* Facebook button */
+.fa-facebook-official {
+    color: #3b5998;
+}
+.fa-facebook-official:hover {
+    background-color: #3b5998;
+}
+
+/* Twitter button */
+.fa-twitter {
+    color: #55acee;
+}
+.fa-twitter:hover {
+    background-color: #55acee;
+}
+
+/* Google-PLus button */
+.fa-google-plus {
+    color: #dd4b39;
+}
+.fa-google-plus:hover {
+    background-color: #dd4b39;
+}
+
+/* Pinterest button */
+.fa-pinterest-p {
+    color: #cb2027;
+}
+.fa-pinterest-p:hover {
+    background-color: #cb2027;
+}
+
+/* Tumblr button */
+.fa-tumblr {
+    color: #32506d;
+}
+.fa-tumblr:hover {
+    background-color: #32506d;
+}
+
+/* Reddit button */
+.fa-reddit-alien {
+    color: #ff4500;
+}
+.fa-reddit-alien:hover {
+    background-color: #ff4500;
+}
+
+/* LinkedIn button */
+.fa-linkedin {
+    color: #007bb5;
+}
+.fa-linkedin:hover {
+    background-color: #007bb5;
+}
+
+/* Email button */
+.fa-envelope {
+    color: #444444;
+}
+.fa-envelope:hover {
+    background-color: #444444;
 }
 
