google analytics added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,6 @@
       </a></p>
       <p style="float: right;margin:0;font-size:34px;">Contact Info: {% include social.html %}</p>
     </footer>
+    {% include analytics.html %}
   </body>
 </html>
